--- a/HAPIExample/HAPI-Example/pom.xml
+++ b/HAPIExample/HAPI-Example/pom.xml
@@ -8,11 +8,72 @@
   <name>HAPI-Example</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- HAPI Dependencies -->
+    <dependency>
+	   <groupId>ca.uhn.hapi.fhir</groupId>
+	   <artifactId>hapi-fhir-base</artifactId>
+	   <version>1.4</version>
+	</dependency>
+
+	<dependency>
+	   <groupId>ca.uhn.hapi.fhir</groupId>
+	   <artifactId>hapi-fhir-structures-dstu</artifactId>
+	   <version>1.4</version>
+	</dependency>
+
+	<dependency>
+	   <groupId>ca.uhn.hapi.fhir</groupId>
+	   <artifactId>hapi-fhir-structures-dstu2</artifactId>
+	   <version>1.4</version>
+	</dependency>
+
+	<!-- hl7 dstu2 is really dstu3 now-->
+	<dependency>
+		<groupId>ca.uhn.hapi.fhir</groupId>
+		<artifactId>hapi-fhir-structures-hl7org-dstu2</artifactId>
+		<version>1.4</version>
+	</dependency>
+
+	<dependency>
+	   <groupId>ca.uhn.hapi.fhir</groupId>
+	   <artifactId>hapi-fhir-validation-resources-dstu2</artifactId>
+	   <version>1.4</version>
+	</dependency>
+
+	<!-- Dependencies for HAPI -->
+
+	<!-- Dependencies for logging -->
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.16</version>
+	</dependency>
+
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>1.1.5</version>
+	</dependency>
+
+	<!-- Dependency for the validator -->
+	<dependency>
+	    <groupId>com.phloc</groupId>
+	    <artifactId>phloc-schematron</artifactId>
+	    <version>2.7.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.phloc</groupId>
+	    <artifactId>phloc-commons</artifactId>
+	    <version>4.4.4</version>
+	</dependency>
+
   </dependencies>
 </project>
