--- a/HAPIExample/HAPI-Example/pom.xml
+++ b/HAPIExample/HAPI-Example/pom.xml
@@ -1,81 +1,112 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>capstone.app</groupId>
-  <artifactId>HAPI-Example</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>HAPI-Example</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>capstone.app</groupId>
+    <artifactId>HAPI-Example</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>HAPI-Example</name>
+    <url>http://maven.apache.org</url>
+    <dependencies>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
 
-    <!-- HAPI Dependencies -->
-    <dependency>
-	   <groupId>ca.uhn.hapi.fhir</groupId>
-	   <artifactId>hapi-fhir-base</artifactId>
-	   <version>1.4</version>
-	</dependency>
+        <!-- HAPI Dependencies -->
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-base</artifactId>
+            <version>1.4</version>
 
-	<dependency>
-	   <groupId>ca.uhn.hapi.fhir</groupId>
-	   <artifactId>hapi-fhir-structures-dstu</artifactId>
-	   <version>1.4</version>
-	</dependency>
-
-	<dependency>
-	   <groupId>ca.uhn.hapi.fhir</groupId>
-	   <artifactId>hapi-fhir-structures-dstu2</artifactId>
-	   <version>1.4</version>
-	</dependency>
-
-	<!-- hl7 dstu2 is really dstu3 now-->
-	<dependency>
-		<groupId>ca.uhn.hapi.fhir</groupId>
-		<artifactId>hapi-fhir-structures-hl7org-dstu2</artifactId>
-		<version>1.4</version>
-	</dependency>
-
-	<dependency>
-	   <groupId>ca.uhn.hapi.fhir</groupId>
-	   <artifactId>hapi-fhir-validation-resources-dstu2</artifactId>
-	   <version>1.4</version>
-	</dependency>
-
-	<!-- Dependencies for HAPI -->
-
-	<!-- Dependencies for logging -->
-	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-api</artifactId>
-		<version>1.7.16</version>
-	</dependency>
-
-	<dependency>
-		<groupId>ch.qos.logback</groupId>
-		<artifactId>logback-classic</artifactId>
-		<version>1.1.5</version>
-	</dependency>
-
-	<!-- Dependency for the validator -->
-	<dependency>
-	    <groupId>com.phloc</groupId>
-	    <artifactId>phloc-schematron</artifactId>
-	    <version>2.7.1</version>
-	</dependency>
-	<dependency>
-	    <groupId>com.phloc</groupId>
-	    <artifactId>phloc-commons</artifactId>
-	    <version>4.4.4</version>
-	</dependency>
+        </dependency>
         
 
-  </dependencies>
+
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-structures-dstu</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-structures-dstu2</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <!-- hl7 dstu2 is really dstu3 now-->
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-structures-hl7org-dstu2</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-validation-resources-dstu2</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <!-- Dependencies for HAPI -->
+
+        <!-- Dependencies for logging -->
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+   
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <!-- Dependency for the validator -->
+        <dependency>
+            <groupId>com.phloc</groupId>
+            <artifactId>phloc-schematron</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.phloc</groupId>
+            <artifactId>phloc-commons</artifactId>
+            <version>4.4.4</version>
+        </dependency>
+        
+        
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>versions-maven-plugin</artifactId>
+            <version>2.2</version>
+        </dependency>
+
+
+    </dependencies>
+
+
+
+    <repositories>
+        <repository>
+            <id>codehaus-mule-repo</id>
+            <name>codehaus-mule-repo</name>
+            <url>
+                https://repository-master.mulesoft.org/nexus/content/groups/public/
+            </url>
+            <layout>default</layout>
+        </repository>
   
+        <repository>
+            <id>Codehaus Mojo</id>
+            <name>Codehaus Mojo</name>
+            <url>https://nexus.codehaus.org/content/repositories/releases/</url>
+        </repository>
+
+    </repositories>
 </project>
